<resources>
    <string name="app_name">Task04</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="description_hint">Описание</string>
    <string name="name_hint">Имя</string>
    <string name="quantity_hint">Количество</string>
    <string name="periodicity_hint">Периодичность</string>
    <string name="quantity">Кол-во: %1$d</string>
    <string name="periodicity">Периодичность: %1$d</string>
    <string name="save_habit">Сохранить</string>
    <string name="menu_title1">title 1</string>
    <string name="menu_title2">title 2</string>
    <string name="author_mail">n.shvedov27@gmail.com</string>
    <string name="nav_bar_title_habit_list">Привычки</string>
    <string name="about_app">О приложении</string>
    <string name="app_description">
        Training project of SkbContur/DoubletApp android course.
        \n
        \n
        Android app for control and view your habit.
    </string>
    <string name="logo">Логотип</string>

    <string name="rgb_current_color">r: %1$d; \ng: %2$d;\nb: %3$d;</string>
    <string name="hsv_current_color">r: %1$f; \ng: %2$f;\nb: %3$f;</string>
    <string name="habit_fragment_label">Привычка</string>
    <string name="app_info_fragment_label">О приложении</string>
    <string name="habit_view_pager_fragment_label">Привычки</string>
    <string name="sort_and_filtering_label">Фильтры и сортировки</string>
    <string name="sort_label">Сортровать по приортету</string>
    <string name="filter_edit_text_hint">Введите фильтр</string>
    <string name="error_habit_save">Невозможно сохранить привычку</string>
    <string name="delete_habit">Удалить</string>

</resources>
