<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/habitViewPagerFragment">

    <fragment
        android:id="@+id/habitFragment"
        android:name="com.bignerdranch.android.task04.HabitFragment"
        android:label="@string/habit_fragment_label"
        tools:layout="@layout/fragment_habit" />
    <fragment
        android:id="@+id/habitViewPagerFragment"
        android:name="com.bignerdranch.android.task04.HabitViewPagerFragment"
        android:label="@string/habit_view_pager_fragment_label"
        tools:layout="@layout/fragment_habit_view_pager" >
        <action
            android:id="@+id/action_habitViewPagerFragment_to_habitFragment"
            app:destination="@id/habitFragment" />
    </fragment>
    <fragment
        android:id="@+id/appInfoFragment"
        android:name="com.bignerdranch.android.task04.AppInfoFragment"
        android:label="@string/app_info_fragment_label"
        tools:layout="@layout/fragment_app_info" />
</navigation>