<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AppInfoFragment">

    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/appImageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/app_name"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/authorMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appName"
            android:layout_alignEnd="@id/appName"
            android:text="@string/author_mail" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/authorMail"
            android:layout_marginTop="40dp"
            android:padding="40dp"
            android:text="@string/app_description"
            android:textSize="17sp" />


    </RelativeLayout>
</ScrollView>