<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sort_and_filtering_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_and_filtering_label"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toTopOf="@id/sort_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/sort_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_label"
        app:layout_constraintBottom_toTopOf="@+id/filter_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_and_filtering_label" />

    <ImageView
        android:id="@+id/filter_arrow_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/ic_arrow_downward_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/sort_label"
        app:layout_constraintStart_toEndOf="@+id/sort_label"
        app:layout_constraintTop_toTopOf="@+id/sort_label"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="24dp"
        android:src="@drawable/ic_arrow_upward_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/filter_arrow_down"
        app:layout_constraintStart_toEndOf="@id/filter_arrow_down"
        app:layout_constraintTop_toTopOf="@+id/filter_arrow_down"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/filter_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/filter_edit_text_hint"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sort_label" />

</androidx.constraintlayout.widget.ConstraintLayout>