<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/habit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="text"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/habit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:gravity="top|start"
            android:hint="@string/description_hint"
            android:inputType="textMultiLine"
            android:lines="6"
            android:overScrollMode="always"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            app:layout_constraintTop_toBottomOf="@+id/habit_name"
            tools:ignore="Autofill"
            tools:layout_editor_absoluteX="10dp" />

        <Spinner
            android:id="@+id/habit_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_description" />

        <RadioGroup
            android:id="@+id/habit_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/habit_priority"
            app:layout_constraintTop_toBottomOf="@+id/habit_description" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_type" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/periodicity_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <EditText
            android:id="@+id/habit_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/habit_periodicity"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/habit_periodicity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/current_color_rgb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/color_pick_recycler_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/current_color_img" />

        <ImageView
            android:id="@+id/current_color_img"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/habit_periodicity"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/current_color_hsv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/color_pick_recycler_view"
            app:layout_constraintEnd_toStartOf="@+id/current_color_img"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/color_pick_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/current_color_img" />

        <Button
            android:id="@+id/save_habit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/save_habit"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@+id/color_pick_recycler_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>